2011-10-18  Xavier Perseguers  <xavier.perseguers@typo3.org>

	* [BUGFIX] #30876: ll-XML to XLIFF conversion fails in TYPO3 4.5

2011-10-10  Oliver Hader  <oliver.hader@typo3.org>

	* [TASK] Release of version 3.3.0

2011-10-10  Oliver Hader  <oliver.hader@typo3.org>

	* [BUGFIX] Change date attribute to use ISO 8601 format

2011-08-29  Xavier Perseguers  <xavier.perseguers@typo3.org>

	* [TASK] Local override of ll-XML files is not supported

2011-08-26  Xavier Perseguers  <xavier.perseguers@typo3.org>

	* [BUGFIX] #29262: XLIFF: Approved attribute is on wrong element

2011-08-24  Xavier Perseguers  <xavier.perseguers@typo3.org>

	* [FEATURE] #29222: Add conversion tool for ll-XML -> XLIFF
	* [CLEANUP] Remove global declarations

2011-03-16  Oliver Hader  <oliver.hader@typo3.org>

	* Fixed bug #13452: Using PHP 5.3 deprecated function ereg
	* Cleanup: Fixed variable assignment

2011-03-15  Oliver Hader  <oliver.hader@typo3.org>

	* Fixed bug #13040: Module name is not passed along in links

2011-02-12  Oliver Hader  <oliver.hader@typo3.org>

	* Fixed bug #12945: Loading PHP classes fails due to wrong path information

2011-02-10  Oliver Hader  <oliver.hader@typo3.org>

	* Release of version 3.2.0

2011-02-10  Oliver Hader  <oliver.hader@typo3.org>

	* Fixed bug: Add flag to not load extdeveval in the frontend
	* Fixed bug #12918: Extension does not work when installed as global extension
	* Cleanup: Used extension icon as module icon as well
	* Cleanup: General code cleanup

2011-02-09  Oliver Hader  <oliver.hader@typo3.org>

	* Fixed bug #1897: Bad phpdoc causes parsing error if function parameter is commented
	* Fixed bug #1895: ExtDevEval inserts linebreaks at ternary conditional operator expressions in "PHP source code tuning"
	* Follow-up to feature #11810: Renamed entry in selector to "Sprite Management"

2011-02-08  Oliver Hader  <oliver.hader@typo3.org>

	* Fixed bug #1747: Toolbar menu doesn't work in Safari (thanks to Steffen Kamper, Susanne Moog)